2003-02-10 15:14  Alexander Malmberg <alexander@malmberg.org>

	Based on patches from Jeff Teunissen:

	* Source/NSWindow.m (GSAllWindows): Check that windowmaps isn't
	NULL before calling NSAllMapTableValues.

	* Source/NSScroller.m: Change size check so the knob and arrows are
	visible until there's absolutely no space left for them. Draw the
	knob slot with the window's background color when the knob isn't
	visible for consistency with OPENSTEP.

	* Source/NSApplication.m (-setApplicationIconImage:): Update all
	windows that have the old app icon as their mini window image so they
	use the new app icon.

2003-02-10 15:09  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSLayoutManager.m, Source/NSLayoutManager.m,
	Source/NSTextView.m: Many minor bug and behavior fixes to get the
	text system to work with several text containers attached to one
	layout manager.

2003-02-09 21:08  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSLayoutManager.m: Clean up old debugging code, whitespace,
	and error handling.
	(-_doLayout): Track next glyph index correctly if we have multiple
	text containers.

	* Source/NSLayoutManager.m (-rectArrayForGlyphRange:
	withinSelectedGlyphRange:inTextContainer:rectCount:,
	-_insertionPointRectForCharacterIndex:textContainer:): Fix handling of
	glyphs that aren't nominally spaced.

2003-02-09 18:34  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSHorizontalTypesetter.m (-breakLineByWordWrappingBefore:):
	Return correct index when breaking at a control glyph.

2003-02-09 18:02  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager_internal.h,
	Source/GSLayoutManager.m, Source/NSLayoutManager.m: Add
	-_didInvalidateLayout method that is called whenever any layout
	information has been invalidated. Use it in NSLayoutManager to
	resize text views.

2003-02-09 15:23  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextView_actions.m: Fix several movement actions (used